# cqchat

./: .gitignore  README.md  test.cpp
client/cqchat/: chatdialog.cpp  chatdialog.h  chatdialog.ui  chatuserlist.cpp  chatuserlist.h  clickedbtn.cpp  clickedbtn.h  clickedlabel.cpp  clickedlabel.h  config.ini  cqchat.icns  cqchat.pro  customizeedit.h  global.cpp  global.h  httpmgr.cpp  httpmgr.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rc.qrc  registerdialog.cpp  registerdialog.h  registerdialog.ui  resetdialog.cpp  resetdialog.h  singleton.h  tcpmgr.cpp  tcpmgr.h  timerbtn.cpp  timerbtn.h  userdata.h  usermgr.h
client/cqchat/style/: stylesheet.qss
server/: CMakeLists.txt
server/.cache/clangd/index/: asioservicepool.cpp.A500811564E93739.idx  asioservicepool.h.02D3936A93819237.idx  chatserver.cpp.01F859D1896D9457.idx  configmgr.cpp.32B04531FF622166.idx  configmgr.h.420836582BF54052.idx  connectionserver.cpp.170CB52DDF9221E0.idx  connectionserver.cpp.C89E34B3A32BFCB7.idx  connectionserver.h.3D9D84BDC652767A.idx  connectionserver.h.8778E8D9D4B81EDB.idx  csession.cpp.25E560631434926B.idx  csession.h.21F9FC68C4E0B2A2.idx  data.h.BC782424FB6C1C6D.idx  gateserver.cpp.9424940588405F85.idx  global.h.559CB179E45165E2.idx  httpconnection.cpp.CB93676F8B364619.idx  httpconnection.h.63B65E9711A04A3B.idx  logicsystem.cpp.4BADCB37C6770F13.idx  logicsystem.cpp.A264538D4DF2078E.idx  logicsystem.h.9373664E5592A983.idx  logicsystem.h.B9D13A9DC54069E0.idx  message.grpc.pb.cc.DA0B238168B9B0FC.idx  message.grpc.pb.h.ACBB2C0A1AAA7720.idx  message.pb.cc.AA2083FCE2844BFD.idx  message.pb.h.B55E63DC65C1780B.idx  msgnode.cpp.C312243A718F0F34.idx  msgnode.h.5031EBDF8BDB03E8.idx  mysqldao.cpp.CE7972E0628A0E4A.idx  mysqldao.h.159E5CCC07C90EFD.idx  mysqlmgr.cpp.8472D4643D63537A.idx  mysqlmgr.h.FA267B2E2625FA4B.idx  redismgr.cpp.58225B2CA24A2F86.idx  redismgr.h.B54FE87DA79A3060.idx  singleton.h.5620DD778F94A1B6.idx  statusgrpcclient.cpp.25F073BB43B36C33.idx  statusgrpcclient.cpp.5D089E9EC0F1E44E.idx  statusgrpcclient.h.6446FD2009445506.idx  statusgrpcclient.h.8E794072CCF8E14C.idx  statusserver.cpp.E158F1B9C95454E3.idx  statusserviceimpl.cpp.B49B03BBD9FE3E30.idx  statusserviceimpl.h.50DF3AB9C5D207E8.idx  (+4 more)
server/GateServer/: CMakeLists.txt  connectionserver.h  gateserver.cpp  global.h  httpconnection.cpp  httpconnection.h  logicsystem.cpp  singleton.h
server/docker/: docker-compose.yml
server/docker/gate_server/: Dockerfile
server/docker/verify_sever/: Dockerfile
server/etc/: config.ini  config.json  gate_server_config.ini
server/scripts/: cqchat_server.service  gate_server.service  gate_server_start.sh  satrt.sh  verify_server.service  verify_server_start.sh
server/src/: CMakeLists.txt
server/src/GateServer/: CMakeLists.txt  asioservicepool.cpp  configmgr.cpp  configmgr.h  connectionserver.cpp  connectionserver.h  gateserver.cpp  global.h  httpconnection.cpp  httpconnection.h  logicsystem.cpp  message.grpc.pb.h  redismgr.cpp  redismgr.h  verifygrpcclient.h
server/src/VarifyServer/: CMakeLists.txt  config.js  config.json  package-lock.json  package.json  redis.js  varifyserver.js
server/src/chat_server/: CMakeLists.txt  chatserver.cpp  connectionserver.cpp  connectionserver.h  csession.cpp  csession.h  logicsystem.cpp  logicsystem.h  msgnode.cpp  msgnode.h  statusgrpcclient.cpp  statusgrpcclient.h
server/src/common/: CMakeLists.txt  asioservicepool.cpp  asioservicepool.h  configmgr.h  data.h  global.h  message.grpc.pb.h  message.proto  mysqldao.cpp  mysqldao.h  mysqlmgr.cpp  mysqlmgr.h  redismgr.h
server/src/gate_server/: CMakeLists.txt  configmgr.cpp  connectionserver.cpp  connectionserver.h  gateserver.cpp  global.h  httpconnection.cpp  logicsystem.cpp  logicsystem.h  mysqldao.cpp  mysqldao.h  mysqlmgr.cpp  mysqlmgr.h  statusgrpcclient.cpp  statusgrpcclient.h  verifygrpcclient.cpp  verifygrpcclient.h
server/src/status_server/: CMakeLists.txt  statusserver.cpp  statusserviceimpl.cpp  statusserviceimpl.h
server/src/verify_server/: CMakeLists.txt  config.js  email.js  message.proto  package-lock.json  proto.js
